--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
 
 
-        <div class="cra w-100">
-            <div class="container">
-                <div class="row p-2  pt-5">
+        <div class="cra w-100 mx-auto px-auto">
+            <div class="container mx-auto px-auto">
+                <div class="row px-auto py-auto mx-auto pt-5">
                     <div class="col-md-10 text-center  px-auto mx-auto">
 
                         <h2 id="ss"  
@@ -114,9 +114,9 @@
     
         </div>
 
-        <div class="third" style="background-color: black;">
-            <div class="container">
-                <div class="row mx-auto px-auto text-center">
+        <div class="third mx-auto px-auto" style="background-color: black;">
+            <div class="container mx-auto px-auto">
+                <div class="row mx-auto py-auto my-auto px-auto text-center">
                     <div class=" col-md-12 ">
                         <h2 id="ss"  
                             class="sse"> MAX STICKER
@@ -168,9 +168,9 @@
 
 
 
-<div class="foot" style="background-color: black;border-top: 2px solid  red;" >
-    <div class="container">
-        <div class="row px-auto mx-auto">
+<div class="foot mx-auto px-auto" style="background-color: black;border-top: 2px solid  red;" >
+    <div class="container mx-auto px-auto">
+        <div class="row px-auto py-auto my-auto mx-auto">
             <div class="col-md-4 p-2 text-center">
                 <p class="text-white" style="font-size: 20px;text-transform: capitalize;font-family: Arial, Helvetica, sans-serif;">  contact </p>
                 
@@ -234,9 +234,9 @@
 <!--  -->
 
 
-<div class="eight  " style="background-color: black;border-top: 3px gainsboro solid; ">
-    <div class="container mx-auto">
-      <div class="row p-4">
+<div class="eight  mx-auto px-auto" style="background-color: black;border-top: 3px gainsboro solid; ">
+    <div class="container  mx-auto px-auto">
+      <div class="row p-2">
         <div class="col-md-12 mx-auto px-auto  text-center text-white">
           <span class="copyright " style="font-size: 18px;"> <span style="color: red;">ECO MAX STICKER</span> © 2021 | All Rights Reserved
           </span>
